Added About creator in about window
Added About creator in about window

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -21,5 +21,10 @@
   "window.about.title": "About Aloe",
   "window.about.description": "Access and organise your files",
   "window.about.website": "Project Website",
-  "window.about.warranty": "This program comes with absolutely no warranty."
+  "window.about.warranty": "This program comes with absolutely no warranty.",
+  "window.about.about" : "About",
+  "window.about.creator": "Creator",
+  "window.about.inspiration": "This app is inspired by Pop OS! 22.04 nautilus",
+  "window.about.used-icons": "This app use icons from:",
+  "window.about.creator-website": "Creator website"
 }
