--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -10,11 +10,21 @@
   "context-menu.new-file": "Nowy Plik",
   "context-menu.new-folder": "Nowy Folder",
   "context-menu.rename": "Zmień nazwę",
-  "tooltip.navigate-next": "Następny Katalog",
-  "tooltip.navigate-parent": "Katalog Nadrzędny",
-  "tooltip.navigate-prev": "Poprzedni Katalog",
+  "tooltip.navigate-next": "Następny katalog",
+  "tooltip.navigate-parent": "Katalog nadrzędny",
+  "tooltip.navigate-prev": "Poprzedni katalog",
   "navigate.reload": "Odśwież",
-  "navigate.dark-mode": "Tryb Ciemny",
-  "navigate.light-mode": "Tryb Jasny",
-  "navigate.hidden-files": "Ukryte pliki"
+  "navigate.dark-mode": "Tryb ciemny",
+  "navigate.light-mode": "Tryb jasny",
+  "navigate.hidden-files": "Ukryte pliki",
+  "navigate.about-button": "O programie",
+  "window.about.title": "O Aloe",
+  "window.about.description": "Dostęp do plików i ich organizacja",
+  "window.about.website": "Strona projektu",
+  "window.about.warranty": "Ten program nie zapewnia żadnej gwarancji.",
+  "window.about.about": "O programie",
+  "window.about.creator": "Twórca",
+  "window.about.inspiration": "Ta aplikacja jest inspirowana Pop OS! 22.04 nautilus",
+  "window.about.used-icons": "Ta aplikacja używa ikon z:",
+  "window.about.creator-website": "Strona twórcy"
 }
