--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -38,5 +38,6 @@
   "window.properties.folder-contents": "Contents: ",
   "window.properties.file-created": "Created: ",
   "window.properties.file-modified": "Modified: ",
-  "window.properties.folder": "Folder"
+  "window.properties.folder": "Folder",
+  "units.bytes": " bytes"
 }
