Added calculate folder size
Added calculate folder size

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -39,5 +39,6 @@
   "window.properties.file-created": "Created: ",
   "window.properties.file-modified": "Modified: ",
   "window.properties.folder": "Folder",
+  "window.properties.items": " items",
   "units.bytes": " bytes"
 }
