--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -39,6 +39,7 @@
   "window.properties.file-created": "Created: ",
   "window.properties.file-modified": "Modified: ",
   "window.properties.folder": "Folder",
+  "window.properties.free-space": "Free space: ",
   "window.properties.items": " items",
   "units.bytes": " bytes"
 }
