Added move to parent option in file context menu
Added move to parent option in file context menu

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -42,5 +42,6 @@
   "window.properties.free-space": "Free space: ",
   "window.properties.items": " items",
   "units.bytes": " bytes",
-  "context-menu.move-to" : "Move to"
+  "context-menu.move-to" : "Move to",
+  "context-menu.move-to-parent": "Move to Parent"
 }
