--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -43,5 +43,8 @@
   "window.properties.items": " items",
   "units.bytes": " bytes",
   "context-menu.move-to" : "Move to",
-  "context-menu.move-to-parent": "Move to Parent"
+  "context-menu.move-to-parent": "Move to Parent",
+  "validator.used-name" : "This name is used",
+  "validator.empty-name": "Name cannot be empty",
+  "validator.contains-slash" : "Name cannot contain slashes"
 }
