Added extract for zip files
Added extract for zip files

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -46,5 +46,6 @@
   "context-menu.move-to-parent": "Move to Parent",
   "validator.used-name" : "This name is used",
   "validator.empty-name": "Name cannot be empty",
-  "validator.contains-slash" : "Name cannot contain slashes"
+  "validator.contains-slash" : "Name cannot contain slashes",
+  "context-menu.extract" : "Extract"
 }
