Added password to zip
Added password to zip

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -52,5 +52,7 @@
   "button.cancel": "Cancel",
   "archive.title": "Create Archive",
   "archive.file-name": "File name:",
-  "button.create": "Create"
+  "button.create": "Create",
+  "archive.compress": "Use Compress",
+  "archive.password": "Use password"
 }
