Added ability to edit an icon in menu
Added ability to edit an icon in menu

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -66,5 +66,7 @@
   "files-menu.title.add": "Add Directory to Menu",
   "utils.title": "Title",
   "button.add": "Add",
-  "files-menu.example-path": "/path/to/directory"
+  "files-menu.example-path": "/path/to/directory",
+  "files-menu.title.edit": "Edit Directory in Menu",
+  "button.save": "Save"
 }
