--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -1,85 +1,86 @@
 {
-  "root.title": "Files",
-  "context-menu.open": "Open",
+  "button.add": "Add",
+  "button.cancel": "Cancel",
+  "button.close": "Close",
+  "button.create": "Create",
+  "button.exit": "Exit",
+  "button.extract": "Extract",
+  "button.save": "Save",
+  "confirm.skip.copy": "Confirm skipping pending operations",
   "context-menu.add": "Add",
-  "context-menu.delete": "Delete",
+  "context-menu.compress": "Compress",
   "context-menu.copy": "Copy",
-  "context-menu.paste": "Paste",
+  "context-menu.delete": "Delete",
   "context-menu.edit": "Edit",
-  "context-menu.remove": "Remove",
+  "context-menu.extract": "Extract",
+  "context-menu.move-to": "Move to",
+  "context-menu.move-to-parent": "Move to Parent",
+  "context-menu.move-to-trash": "Move to Trash",
   "context-menu.new-file": "New File",
   "context-menu.new-folder": "New Folder",
+  "context-menu.open": "Open",
+  "context-menu.paste": "Paste",
+  "context-menu.properties": "Properties",
+  "context-menu.remove": "Remove",
   "context-menu.rename": "Rename",
+  "context-menu.select-all": "Select All",
+  "files-menu.example-path": "/path/to/directory",
+  "files-menu.title.add": "Add Directory to Menu",
+  "files-menu.title.edit": "Edit Directory in Menu",
+  "navigate.about-button": "About Files",
+  "navigate.dark-mode": "Dark Mode",
+  "navigate.hidden-files": "Hidden files",
+  "navigate.light-mode": "Light Mode",
+  "navigate.reload": "Refresh",
+  "root.title": "Files",
   "tooltip.navigate-next": "Next Directory",
   "tooltip.navigate-parent": "Parent Directory",
   "tooltip.navigate-prev": "Previous Directory",
-  "navigate.reload": "Refresh",
-  "navigate.dark-mode": "Dark Mode",
-  "navigate.light-mode": "Light Mode",
-  "navigate.hidden-files": "Hidden files",
-  "navigate.about-button": "About Files",
-  "window.about.title": "About Aloe",
-  "window.about.description": "Access and organise your files",
-  "window.about.website": "Project Website",
-  "window.about.warranty": "This program comes with absolutely no warranty.",
-  "window.about.about" : "About",
+  "units.bytes": " bytes",
+  "utils.title": "Title",
+  "validator.contains-slash": "Name cannot contain slashes",
+  "validator.empty-name": "Name cannot be empty",
+  "validator.used-name": "This name is used",
+  "window.about.about": "About",
   "window.about.creator": "Creator",
-  "window.about.inspiration": "This app is inspired by PopOS! 22.04 nautilus",
-  "window.about.used-icons": "This app use icons from:",
   "window.about.creator-website": "Creator website",
-  "context-menu.properties": "Properties",
-  "window.properties.folder-properties" : "Folder Properties",
-  "window.properties.file-properties" : "File Properties",
-  "window.properties.file-name" : "Name: ",
-  "window.properties.file-path": "Path: ",
-  "window.properties.file-type": "Type: ",
-  "window.properties.file-size": "Size: ",
-  "window.properties.file-parent": "Parent: ",
-  "window.properties.folder-contents": "Contents: ",
+  "window.about.description": "Access and organise your files",
+  "window.about.inspiration": "This app is inspired by PopOS! 22.04 nautilus",
+  "window.about.title": "About Aloe",
+  "window.about.used-icons": "This app use icons from:",
+  "window.about.warranty": "This program comes with absolutely no warranty.",
+  "window.about.website": "Project Website",
+  "window.archive.compress": "Use Compress",
+  "window.archive.compress.error": "Error while compress!",
+  "window.archive.compress.success": "Compression successfully!",
+  "window.archive.extract.enter-password": "Enter password:",
+  "window.archive.extract.error": "Error while extraction!",
+  "window.archive.extract.success": "Extraction successfully!",
+  "window.archive.extract.title": "Extract Archive",
+  "window.archive.extract.wrong-password": "Wrong password!",
+  "window.archive.file-name": "File name:",
+  "window.archive.password": "Use password",
+  "window.archive.title": "Create Archive",
+  "window.decision.combine-directory": "Combine folders",
+  "window.decision.copy-next-to": "Copy next to",
+  "window.decision.destination-has-directory": "The destination already has a directory named: ",
+  "window.decision.destination-has-file": "The destination already has a file named: ",
+  "window.decision.replace.directory": "Replace folder",
+  "window.decision.replace.file": "Replace file",
+  "window.decision.skip.directory": "Skip this folder",
+  "window.decision.skip.file": "Skip this file",
+  "window.decision.title": "Replace or Skip",
   "window.properties.file-created": "Created: ",
   "window.properties.file-modified": "Modified: ",
+  "window.properties.file-name": "Name: ",
+  "window.properties.file-parent": "Parent: ",
+  "window.properties.file-path": "Path: ",
+  "window.properties.file-properties": "File Properties",
+  "window.properties.file-size": "Size: ",
+  "window.properties.file-type": "Type: ",
   "window.properties.folder": "Folder",
+  "window.properties.folder-contents": "Contents: ",
+  "window.properties.folder-properties": "Folder Properties",
   "window.properties.free-space": "Free space: ",
-  "window.properties.items": " items",
-  "units.bytes": " bytes",
-  "context-menu.move-to" : "Move to",
-  "context-menu.move-to-parent": "Move to Parent",
-  "validator.used-name" : "This name is used",
-  "validator.empty-name": "Name cannot be empty",
-  "validator.contains-slash" : "Name cannot contain slashes",
-  "context-menu.extract" : "Extract",
-  "context-menu.compress": "Compress",
-  "button.cancel": "Cancel",
-  "archive.title": "Create Archive",
-  "archive.file-name": "File name:",
-  "button.create": "Create",
-  "archive.compress": "Use Compress",
-  "archive.password": "Use password",
-  "archive.extract.title": "Extract Archive",
-  "archive.extract.enter-password": "Enter password:",
-  "archive.extract.wrong-password": "Wrong password!",
-  "archive.extract.success": "Extraction successfully!",
-  "button.extract": "Extract",
-  "button.close": "Close",
-  "archive.compress.success": "Compression successfully!",
-  "archive.compress.error": "Error while compress!",
-  "files-menu.title.add": "Add Directory to Menu",
-  "utils.title": "Title",
-  "button.add": "Add",
-  "files-menu.example-path": "/path/to/directory",
-  "files-menu.title.edit": "Edit Directory in Menu",
-  "button.save": "Save",
-  "context-menu.select-all": "Select All",
-  "context-menu.move-to-trash": "Move to Trash",
-  "window.decision.title": "Replace or Skip",
-  "window.decision.skip.file": "Skip this file",
-  "window.decision.skip.directory": "Skip this folder",
-  "window.decision.replace.file": "Replace file",
-  "window.decision.replace.directory": "Replace folder",
-  "window.decision.copy-next-to": "Copy next to",
-  "window.decision.combine-directory": "Combine folders",
-  "window.decision.destination-has-file": "The destination already has a file named: ",
-  "window.decision.destination-has-directory": "The destination already has a directory named: ",
-  "button.exit": "Exit",
-  "confirm.skip.copy": "Confirm skipping pending operations"
+  "window.properties.items": " items"
 }
