--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -1,30 +1,86 @@
 {
-  "root.title": "Pliki",
-  "context-menu.open": "Otwórz",
+  "button.add": "Dodaj",
+  "button.cancel": "Anuluj",
+  "button.close": "Zamknij",
+  "button.create": "Utwórz",
+  "button.exit": "Wyjdź",
+  "button.extract": "Wypakuj",
+  "button.save": "Zapisz",
+  "confirm.skip.copy": "Potwierdź pominięcie oczekujących operacji",
   "context-menu.add": "Dodaj",
-  "context-menu.delete": "Usuń",
+  "context-menu.compress": "Skompresuj",
   "context-menu.copy": "Kopiuj",
-  "context-menu.paste": "Wklej",
+  "context-menu.delete": "Usuń",
   "context-menu.edit": "Edytuj",
+  "context-menu.extract": "Wypakuj",
+  "context-menu.move-to": "Przenieś do",
+  "context-menu.move-to-parent": "Przenieś do katalogu nadrzędnego",
+  "context-menu.move-to-trash": "Przenieś do kosza",
+  "context-menu.new-file": "Nowy plik",
+  "context-menu.new-folder": "Nowy folder",
+  "context-menu.open": "Otwórz",
+  "context-menu.paste": "Wklej",
+  "context-menu.properties": "Właściwości",
   "context-menu.remove": "Usuń",
-  "context-menu.new-file": "Nowy Plik",
-  "context-menu.new-folder": "Nowy Folder",
   "context-menu.rename": "Zmień nazwę",
+  "context-menu.select-all": "Zaznacz wszystko",
+  "files-menu.example-path": "/ścieżka/do/katalogu",
+  "files-menu.title.add": "Dodaj katalog do menu",
+  "files-menu.title.edit": "Edytuj katalog w menu",
+  "navigate.about-button": "O aplikacji",
+  "navigate.dark-mode": "Tryb ciemny",
+  "navigate.hidden-files": "Ukryte pliki",
+  "navigate.light-mode": "Tryb jasny",
+  "navigate.reload": "Odśwież",
+  "root.title": "Pliki",
   "tooltip.navigate-next": "Następny katalog",
   "tooltip.navigate-parent": "Katalog nadrzędny",
   "tooltip.navigate-prev": "Poprzedni katalog",
-  "navigate.reload": "Odśwież",
-  "navigate.dark-mode": "Tryb ciemny",
-  "navigate.light-mode": "Tryb jasny",
-  "navigate.hidden-files": "Ukryte pliki",
-  "navigate.about-button": "O programie",
-  "window.about.title": "O Aloe",
-  "window.about.description": "Dostęp do plików i ich organizacja",
-  "window.about.website": "Strona projektu",
-  "window.about.warranty": "Ten program nie zapewnia żadnej gwarancji.",
-  "window.about.about": "O programie",
+  "units.bytes": " bajty",
+  "utils.title": "Tytuł",
+  "validator.contains-slash": "Nazwa nie może zawierać ukośników",
+  "validator.empty-name": "Nazwa nie może być pusta",
+  "validator.used-name": "Ta nazwa jest już używana",
+  "window.about.about": "O aplikacji",
   "window.about.creator": "Twórca",
+  "window.about.creator-website": "Strona twórcy",
+  "window.about.description": "Uzyskaj dostęp i zarządzaj swoimi plikami",
   "window.about.inspiration": "Ta aplikacja jest inspirowana PopOS! 22.04 nautilus",
+  "window.about.title": "O Aloe",
   "window.about.used-icons": "Ta aplikacja używa ikon z:",
-  "window.about.creator-website": "Strona twórcy"
+  "window.about.warranty": "Program nie zapewnia żadnej gwarancji.",
+  "window.about.website": "Strona projektu",
+  "window.archive.compress": "Użyj kompresji",
+  "window.archive.compress.error": "Błąd podczas kompresji!",
+  "window.archive.compress.success": "Kompresja zakończona sukcesem!",
+  "window.archive.extract.error": "Błąd podczas wypakowania!",
+  "window.archive.extract.enter-password": "Wprowadź hasło:",
+  "window.archive.extract.success": "Wypakowanie zakończone sukcesem!",
+  "window.archive.extract.title": "Wypakuj archiwum",
+  "window.archive.extract.wrong-password": "Błędne hasło!",
+  "window.archive.file-name": "Nazwa pliku:",
+  "window.archive.password": "Użyj hasła",
+  "window.archive.title": "Utwórz archiwum",
+  "window.decision.combine-directory": "Połącz foldery",
+  "window.decision.copy-next-to": "Kopiuj obok",
+  "window.decision.destination-has-directory": "Miejsce docelowe już zawiera folder o nazwie: ",
+  "window.decision.destination-has-file": "Miejsce docelowe już zawiera plik o nazwie: ",
+  "window.decision.replace.directory": "Zastąp folder",
+  "window.decision.replace.file": "Zastąp plik",
+  "window.decision.skip.directory": "Pomiń ten folder",
+  "window.decision.skip.file": "Pomiń ten plik",
+  "window.decision.title": "Zastąpić czy pominąć",
+  "window.properties.file-created": "Utworzono: ",
+  "window.properties.file-modified": "Zmodyfikowano: ",
+  "window.properties.file-name": "Nazwa: ",
+  "window.properties.file-parent": "Nadrzędny: ",
+  "window.properties.file-path": "Ścieżka: ",
+  "window.properties.file-properties": "Właściwości pliku",
+  "window.properties.file-size": "Rozmiar: ",
+  "window.properties.file-type": "Typ: ",
+  "window.properties.folder": "Folder",
+  "window.properties.folder-contents": "Zawartość: ",
+  "window.properties.folder-properties": "Właściwości folderu",
+  "window.properties.free-space": "Wolne miejsce: ",
+  "window.properties.items": " elementy"
 }
