--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -11,6 +11,7 @@
   "context-menu.compress": "Skompresuj",
   "context-menu.copy": "Kopiuj",
   "context-menu.delete": "Usuń",
+  "context-menu.duplicate": "Duplikuj",
   "context-menu.edit": "Edytuj",
   "context-menu.extract": "Wypakuj",
   "context-menu.move-to": "Przenieś do",
