--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -8,6 +8,7 @@
   "button.save": "Zapisz",
   "confirm.skip.copy": "Potwierdź pominięcie oczekujących operacji",
   "context-menu.add": "Dodaj",
+  "context-menu.add-to-menu": "Dodaj do menu",
   "context-menu.compress": "Skompresuj",
   "context-menu.copy": "Kopiuj",
   "context-menu.delete": "Usuń",
