--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -34,11 +34,14 @@
   "navigate.hidden-files": "Ukryte pliki",
   "navigate.light-mode": "Tryb jasny",
   "navigate.reload": "Odśwież",
+  "navigate.settings": "Ustawienia",
   "root.title": "Pliki",
   "tooltip.navigate-next": "Następny katalog",
   "tooltip.navigate-parent": "Katalog nadrzędny",
   "tooltip.navigate-prev": "Poprzedni katalog",
   "units.bytes": " bajty",
+  "utils.left": "Lewy",
+  "utils.right": "Prawy",
   "utils.title": "Tytuł",
   "validator.contains-slash": "Nazwa nie może zawierać ukośników",
   "validator.empty-name": "Nazwa nie może być pusta",
@@ -55,8 +58,8 @@
   "window.archive.compress": "Użyj kompresji",
   "window.archive.compress.error": "Błąd podczas kompresji!",
   "window.archive.compress.success": "Kompresja zakończona sukcesem!",
-  "window.archive.extract.error": "Błąd podczas wypakowania!",
   "window.archive.extract.enter-password": "Wprowadź hasło:",
+  "window.archive.extract.error": "Błąd podczas wypakowania!",
   "window.archive.extract.success": "Wypakowanie zakończone sukcesem!",
   "window.archive.extract.title": "Wypakuj archiwum",
   "window.archive.extract.wrong-password": "Błędne hasło!",
@@ -84,5 +87,9 @@
   "window.properties.folder-contents": "Zawartość: ",
   "window.properties.folder-properties": "Właściwości folderu",
   "window.properties.free-space": "Wolne miejsce: ",
-  "window.properties.items": " elementy"
+  "window.properties.items": " elementy",
+  "window.settings.menu.menu": "Menu",
+  "window.settings.menu.menu-position": "Pozycja menu",
+  "window.settings.title": "Settings",
+  "window.settings.use-menu": "Używaj menu plików"
 }
