Added setting for use icons in menu
Added setting for use icons in menu

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -91,5 +91,6 @@
   "window.settings.menu.menu": "Menu",
   "window.settings.menu.menu-position": "Menu position",
   "window.settings.title": "Settings",
-  "window.settings.use-menu": "Use files menu"
+  "window.settings.menu.use-menu": "Use files menu",
+  "window.settings.menu.use-icon": "Use icon"
 }
