--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -101,5 +101,6 @@
   "window.settings.files.start-folder-location": "Lokalizacja katalogu startowego",
   "window.settings.files.start-folder.home": "Domowy",
   "window.settings.files.start-folder.last": "Ostatni",
-  "window.settings.files.start-folder.custom": "Własny"
+  "window.settings.files.start-folder.custom": "Własny",
+  "window.settings.files.delete-archive-after-extract": "Usuń archiwum po wypakowaniu"
 }
