Added the ability to select your own file box size
Added the ability to select your own file box size

--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -103,5 +103,8 @@
   "window.settings.files.start-folder.last": "Last",
   "window.settings.files.start-folder.custom": "Custom",
   "window.settings.files.delete-archive-after-extract": "Delete archive after extract",
-  "window.settings.files.display-thumbnails": "Display image thumbnails"
+  "window.settings.files.display-thumbnails": "Display image thumbnails",
+  "window.settings.files.file-box-size": "File box size",
+  "window.settings.files.file-box-size.small": "Small",
+  "window.settings.files.file-box-size.large": "Large"
 }
