--- a/src/main/resources/assets/lang/pl.json
+++ b/src/main/resources/assets/lang/pl.json
@@ -103,5 +103,8 @@
   "window.settings.files.start-folder.last": "Ostatni",
   "window.settings.files.start-folder.custom": "Własny",
   "window.settings.files.delete-archive-after-extract": "Usuń archiwum po wypakowaniu",
-  "window.settings.files.display-thumbnails": "Wyświetl miniatury obrazów"
+  "window.settings.files.display-thumbnails": "Wyświetl miniatury obrazów",
+  "window.settings.files.file-box-size": "Rozmiar pudełko z plikiem",
+  "window.settings.files.file-box-size.small": "Mały",
+  "window.settings.files.file-box-size.large": "Wielki"
 }
