--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -109,5 +109,6 @@
   "window.settings.files.file-box-size.large": "Large",
   "window.settings.files.view": "View",
   "window.settings.files.view.grid": "Grid",
-  "window.settings.files.view.list": "List"
+  "window.settings.files.view.list": "List",
+  "window.archive.extract.password-required": "The archive is password protected"
 }
