--- a/src/main/resources/assets/lang/en.json
+++ b/src/main/resources/assets/lang/en.json
@@ -111,5 +111,9 @@
   "window.settings.files.view.grid": "Grid",
   "window.settings.files.view.list": "List",
   "window.archive.extract.password-required": "The archive is password protected",
-  "window.settings.language": "Language"
+  "window.settings.language": "Language",
+  "window.settings.menu.description": "Menu view, position and items",
+  "window.settings.files.description": "Size, archives, start directory, hidden files and more",
+  "window.settings.language.description": "Language and time formats",
+  "window.settings.back-to-menu": "Back to menu"
 }
